parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Sentencias
Rule 2     Sentencias -> Sentencia
Rule 3     Sentencias -> Sentencias Sentencia
Rule 4     Sentencia -> Declaracion
Rule 5     Sentencia -> Asignacion
Rule 6     Sentencia -> EstructuraControl
Rule 7     Sentencia -> SentenciaPrint
Rule 8     Declaracion -> TIPO ID SEMICOLON
Rule 9     Asignacion -> ID ASIGN Expresion SEMICOLON
Rule 10    EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
Rule 11    EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
Rule 12    EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
Rule 13    SentenciaPrint -> PRINT ID SEMICOLON
Rule 14    Expresion -> Termino
Rule 15    Expresion -> Expresion OP_SUMA Termino
Rule 16    Expresion -> Expresion OP_REL Termino
Rule 17    Termino -> Factor
Rule 18    Termino -> Termino OP_MUL Factor
Rule 19    Factor -> ID
Rule 20    Factor -> NUM
Rule 21    Factor -> LPAREN Expresion RPAREN

Terminals, with rules where they appear

ASIGN                : 9
ELSE                 : 11
ID                   : 8 9 13 19
IF                   : 10 11
LBRACE               : 10 11 11 12
LPAREN               : 10 11 12 21
NUM                  : 20
OP_MUL               : 18
OP_REL               : 16
OP_SUMA              : 15
PRINT                : 13
RBRACE               : 10 11 11 12
RPAREN               : 10 11 12 21
SEMICOLON            : 8 9 13
TIPO                 : 8
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

Asignacion           : 5
Declaracion          : 4
EstructuraControl    : 6
Expresion            : 9 10 11 12 15 16 21
Factor               : 17 18
Programa             : 0
Sentencia            : 2 3
SentenciaPrint       : 7
Sentencias           : 1 3 10 11 11 12
Termino              : 14 15 16 18

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Sentencias
    (2) Sentencias -> . Sentencia
    (3) Sentencias -> . Sentencias Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Programa                       shift and go to state 1
    Sentencias                     shift and go to state 2
    Sentencia                      shift and go to state 3
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Sentencias .
    (3) Sentencias -> Sentencias . Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    $end            reduce using rule 1 (Programa -> Sentencias .)
    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Sentencia                      shift and go to state 13
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 3

    (2) Sentencias -> Sentencia .

    TIPO            reduce using rule 2 (Sentencias -> Sentencia .)
    ID              reduce using rule 2 (Sentencias -> Sentencia .)
    IF              reduce using rule 2 (Sentencias -> Sentencia .)
    WHILE           reduce using rule 2 (Sentencias -> Sentencia .)
    PRINT           reduce using rule 2 (Sentencias -> Sentencia .)
    $end            reduce using rule 2 (Sentencias -> Sentencia .)
    RBRACE          reduce using rule 2 (Sentencias -> Sentencia .)


state 4

    (4) Sentencia -> Declaracion .

    TIPO            reduce using rule 4 (Sentencia -> Declaracion .)
    ID              reduce using rule 4 (Sentencia -> Declaracion .)
    IF              reduce using rule 4 (Sentencia -> Declaracion .)
    WHILE           reduce using rule 4 (Sentencia -> Declaracion .)
    PRINT           reduce using rule 4 (Sentencia -> Declaracion .)
    $end            reduce using rule 4 (Sentencia -> Declaracion .)
    RBRACE          reduce using rule 4 (Sentencia -> Declaracion .)


state 5

    (5) Sentencia -> Asignacion .

    TIPO            reduce using rule 5 (Sentencia -> Asignacion .)
    ID              reduce using rule 5 (Sentencia -> Asignacion .)
    IF              reduce using rule 5 (Sentencia -> Asignacion .)
    WHILE           reduce using rule 5 (Sentencia -> Asignacion .)
    PRINT           reduce using rule 5 (Sentencia -> Asignacion .)
    $end            reduce using rule 5 (Sentencia -> Asignacion .)
    RBRACE          reduce using rule 5 (Sentencia -> Asignacion .)


state 6

    (6) Sentencia -> EstructuraControl .

    TIPO            reduce using rule 6 (Sentencia -> EstructuraControl .)
    ID              reduce using rule 6 (Sentencia -> EstructuraControl .)
    IF              reduce using rule 6 (Sentencia -> EstructuraControl .)
    WHILE           reduce using rule 6 (Sentencia -> EstructuraControl .)
    PRINT           reduce using rule 6 (Sentencia -> EstructuraControl .)
    $end            reduce using rule 6 (Sentencia -> EstructuraControl .)
    RBRACE          reduce using rule 6 (Sentencia -> EstructuraControl .)


state 7

    (7) Sentencia -> SentenciaPrint .

    TIPO            reduce using rule 7 (Sentencia -> SentenciaPrint .)
    ID              reduce using rule 7 (Sentencia -> SentenciaPrint .)
    IF              reduce using rule 7 (Sentencia -> SentenciaPrint .)
    WHILE           reduce using rule 7 (Sentencia -> SentenciaPrint .)
    PRINT           reduce using rule 7 (Sentencia -> SentenciaPrint .)
    $end            reduce using rule 7 (Sentencia -> SentenciaPrint .)
    RBRACE          reduce using rule 7 (Sentencia -> SentenciaPrint .)


state 8

    (8) Declaracion -> TIPO . ID SEMICOLON

    ID              shift and go to state 14


state 9

    (9) Asignacion -> ID . ASIGN Expresion SEMICOLON

    ASIGN           shift and go to state 15


state 10

    (10) EstructuraControl -> IF . LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> IF . LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE

    LPAREN          shift and go to state 16


state 11

    (12) EstructuraControl -> WHILE . LPAREN Expresion RPAREN LBRACE Sentencias RBRACE

    LPAREN          shift and go to state 17


state 12

    (13) SentenciaPrint -> PRINT . ID SEMICOLON

    ID              shift and go to state 18


state 13

    (3) Sentencias -> Sentencias Sentencia .

    TIPO            reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    ID              reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    IF              reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    WHILE           reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    PRINT           reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    $end            reduce using rule 3 (Sentencias -> Sentencias Sentencia .)
    RBRACE          reduce using rule 3 (Sentencias -> Sentencias Sentencia .)


state 14

    (8) Declaracion -> TIPO ID . SEMICOLON

    SEMICOLON       shift and go to state 19


state 15

    (9) Asignacion -> ID ASIGN . Expresion SEMICOLON
    (14) Expresion -> . Termino
    (15) Expresion -> . Expresion OP_SUMA Termino
    (16) Expresion -> . Expresion OP_REL Termino
    (17) Termino -> . Factor
    (18) Termino -> . Termino OP_MUL Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Expresion                      shift and go to state 21
    Termino                        shift and go to state 22
    Factor                         shift and go to state 23

state 16

    (10) EstructuraControl -> IF LPAREN . Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> IF LPAREN . Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (14) Expresion -> . Termino
    (15) Expresion -> . Expresion OP_SUMA Termino
    (16) Expresion -> . Expresion OP_REL Termino
    (17) Termino -> . Factor
    (18) Termino -> . Termino OP_MUL Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Expresion                      shift and go to state 26
    Termino                        shift and go to state 22
    Factor                         shift and go to state 23

state 17

    (12) EstructuraControl -> WHILE LPAREN . Expresion RPAREN LBRACE Sentencias RBRACE
    (14) Expresion -> . Termino
    (15) Expresion -> . Expresion OP_SUMA Termino
    (16) Expresion -> . Expresion OP_REL Termino
    (17) Termino -> . Factor
    (18) Termino -> . Termino OP_MUL Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Expresion                      shift and go to state 27
    Termino                        shift and go to state 22
    Factor                         shift and go to state 23

state 18

    (13) SentenciaPrint -> PRINT ID . SEMICOLON

    SEMICOLON       shift and go to state 28


state 19

    (8) Declaracion -> TIPO ID SEMICOLON .

    TIPO            reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)
    ID              reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)
    IF              reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)
    WHILE           reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)
    PRINT           reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)
    $end            reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)
    RBRACE          reduce using rule 8 (Declaracion -> TIPO ID SEMICOLON .)


state 20

    (19) Factor -> ID .

    OP_MUL          reduce using rule 19 (Factor -> ID .)
    SEMICOLON       reduce using rule 19 (Factor -> ID .)
    OP_SUMA         reduce using rule 19 (Factor -> ID .)
    OP_REL          reduce using rule 19 (Factor -> ID .)
    RPAREN          reduce using rule 19 (Factor -> ID .)


state 21

    (9) Asignacion -> ID ASIGN Expresion . SEMICOLON
    (15) Expresion -> Expresion . OP_SUMA Termino
    (16) Expresion -> Expresion . OP_REL Termino

    SEMICOLON       shift and go to state 29
    OP_SUMA         shift and go to state 30
    OP_REL          shift and go to state 31


state 22

    (14) Expresion -> Termino .
    (18) Termino -> Termino . OP_MUL Factor

    SEMICOLON       reduce using rule 14 (Expresion -> Termino .)
    OP_SUMA         reduce using rule 14 (Expresion -> Termino .)
    OP_REL          reduce using rule 14 (Expresion -> Termino .)
    RPAREN          reduce using rule 14 (Expresion -> Termino .)
    OP_MUL          shift and go to state 32


state 23

    (17) Termino -> Factor .

    OP_MUL          reduce using rule 17 (Termino -> Factor .)
    SEMICOLON       reduce using rule 17 (Termino -> Factor .)
    OP_SUMA         reduce using rule 17 (Termino -> Factor .)
    OP_REL          reduce using rule 17 (Termino -> Factor .)
    RPAREN          reduce using rule 17 (Termino -> Factor .)


state 24

    (20) Factor -> NUM .

    OP_MUL          reduce using rule 20 (Factor -> NUM .)
    SEMICOLON       reduce using rule 20 (Factor -> NUM .)
    OP_SUMA         reduce using rule 20 (Factor -> NUM .)
    OP_REL          reduce using rule 20 (Factor -> NUM .)
    RPAREN          reduce using rule 20 (Factor -> NUM .)


state 25

    (21) Factor -> LPAREN . Expresion RPAREN
    (14) Expresion -> . Termino
    (15) Expresion -> . Expresion OP_SUMA Termino
    (16) Expresion -> . Expresion OP_REL Termino
    (17) Termino -> . Factor
    (18) Termino -> . Termino OP_MUL Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Expresion                      shift and go to state 33
    Termino                        shift and go to state 22
    Factor                         shift and go to state 23

state 26

    (10) EstructuraControl -> IF LPAREN Expresion . RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> IF LPAREN Expresion . RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (15) Expresion -> Expresion . OP_SUMA Termino
    (16) Expresion -> Expresion . OP_REL Termino

    RPAREN          shift and go to state 34
    OP_SUMA         shift and go to state 30
    OP_REL          shift and go to state 31


state 27

    (12) EstructuraControl -> WHILE LPAREN Expresion . RPAREN LBRACE Sentencias RBRACE
    (15) Expresion -> Expresion . OP_SUMA Termino
    (16) Expresion -> Expresion . OP_REL Termino

    RPAREN          shift and go to state 35
    OP_SUMA         shift and go to state 30
    OP_REL          shift and go to state 31


state 28

    (13) SentenciaPrint -> PRINT ID SEMICOLON .

    TIPO            reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)
    ID              reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)
    IF              reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)
    WHILE           reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)
    PRINT           reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)
    $end            reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)
    RBRACE          reduce using rule 13 (SentenciaPrint -> PRINT ID SEMICOLON .)


state 29

    (9) Asignacion -> ID ASIGN Expresion SEMICOLON .

    TIPO            reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)
    ID              reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)
    IF              reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)
    WHILE           reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)
    PRINT           reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)
    $end            reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)
    RBRACE          reduce using rule 9 (Asignacion -> ID ASIGN Expresion SEMICOLON .)


state 30

    (15) Expresion -> Expresion OP_SUMA . Termino
    (17) Termino -> . Factor
    (18) Termino -> . Termino OP_MUL Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Termino                        shift and go to state 36
    Factor                         shift and go to state 23

state 31

    (16) Expresion -> Expresion OP_REL . Termino
    (17) Termino -> . Factor
    (18) Termino -> . Termino OP_MUL Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Termino                        shift and go to state 37
    Factor                         shift and go to state 23

state 32

    (18) Termino -> Termino OP_MUL . Factor
    (19) Factor -> . ID
    (20) Factor -> . NUM
    (21) Factor -> . LPAREN Expresion RPAREN

    ID              shift and go to state 20
    NUM             shift and go to state 24
    LPAREN          shift and go to state 25

    Factor                         shift and go to state 38

state 33

    (21) Factor -> LPAREN Expresion . RPAREN
    (15) Expresion -> Expresion . OP_SUMA Termino
    (16) Expresion -> Expresion . OP_REL Termino

    RPAREN          shift and go to state 39
    OP_SUMA         shift and go to state 30
    OP_REL          shift and go to state 31


state 34

    (10) EstructuraControl -> IF LPAREN Expresion RPAREN . LBRACE Sentencias RBRACE
    (11) EstructuraControl -> IF LPAREN Expresion RPAREN . LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE

    LBRACE          shift and go to state 40


state 35

    (12) EstructuraControl -> WHILE LPAREN Expresion RPAREN . LBRACE Sentencias RBRACE

    LBRACE          shift and go to state 41


state 36

    (15) Expresion -> Expresion OP_SUMA Termino .
    (18) Termino -> Termino . OP_MUL Factor

    SEMICOLON       reduce using rule 15 (Expresion -> Expresion OP_SUMA Termino .)
    OP_SUMA         reduce using rule 15 (Expresion -> Expresion OP_SUMA Termino .)
    OP_REL          reduce using rule 15 (Expresion -> Expresion OP_SUMA Termino .)
    RPAREN          reduce using rule 15 (Expresion -> Expresion OP_SUMA Termino .)
    OP_MUL          shift and go to state 32


state 37

    (16) Expresion -> Expresion OP_REL Termino .
    (18) Termino -> Termino . OP_MUL Factor

    SEMICOLON       reduce using rule 16 (Expresion -> Expresion OP_REL Termino .)
    OP_SUMA         reduce using rule 16 (Expresion -> Expresion OP_REL Termino .)
    OP_REL          reduce using rule 16 (Expresion -> Expresion OP_REL Termino .)
    RPAREN          reduce using rule 16 (Expresion -> Expresion OP_REL Termino .)
    OP_MUL          shift and go to state 32


state 38

    (18) Termino -> Termino OP_MUL Factor .

    OP_MUL          reduce using rule 18 (Termino -> Termino OP_MUL Factor .)
    SEMICOLON       reduce using rule 18 (Termino -> Termino OP_MUL Factor .)
    OP_SUMA         reduce using rule 18 (Termino -> Termino OP_MUL Factor .)
    OP_REL          reduce using rule 18 (Termino -> Termino OP_MUL Factor .)
    RPAREN          reduce using rule 18 (Termino -> Termino OP_MUL Factor .)


state 39

    (21) Factor -> LPAREN Expresion RPAREN .

    OP_MUL          reduce using rule 21 (Factor -> LPAREN Expresion RPAREN .)
    SEMICOLON       reduce using rule 21 (Factor -> LPAREN Expresion RPAREN .)
    OP_SUMA         reduce using rule 21 (Factor -> LPAREN Expresion RPAREN .)
    OP_REL          reduce using rule 21 (Factor -> LPAREN Expresion RPAREN .)
    RPAREN          reduce using rule 21 (Factor -> LPAREN Expresion RPAREN .)


state 40

    (10) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE . Sentencias RBRACE
    (11) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE . Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (2) Sentencias -> . Sentencia
    (3) Sentencias -> . Sentencias Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Sentencias                     shift and go to state 42
    Sentencia                      shift and go to state 3
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 41

    (12) EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE . Sentencias RBRACE
    (2) Sentencias -> . Sentencia
    (3) Sentencias -> . Sentencias Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Sentencias                     shift and go to state 43
    Sentencia                      shift and go to state 3
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 42

    (10) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias . RBRACE
    (11) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias . RBRACE ELSE LBRACE Sentencias RBRACE
    (3) Sentencias -> Sentencias . Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    RBRACE          shift and go to state 44
    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Sentencia                      shift and go to state 13
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 43

    (12) EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias . RBRACE
    (3) Sentencias -> Sentencias . Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    RBRACE          shift and go to state 45
    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Sentencia                      shift and go to state 13
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 44

    (10) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .
    (11) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE . ELSE LBRACE Sentencias RBRACE

    TIPO            reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    ID              reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    IF              reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    WHILE           reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    PRINT           reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    $end            reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    RBRACE          reduce using rule 10 (EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    ELSE            shift and go to state 46


state 45

    (12) EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .

    TIPO            reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    ID              reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    IF              reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    WHILE           reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    PRINT           reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    $end            reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)
    RBRACE          reduce using rule 12 (EstructuraControl -> WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE .)


state 46

    (11) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE . LBRACE Sentencias RBRACE

    LBRACE          shift and go to state 47


state 47

    (11) EstructuraControl -> IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE . Sentencias RBRACE
    (2) Sentencias -> . Sentencia
    (3) Sentencias -> . Sentencias Sentencia
    (4) Sentencia -> . Declaracion
    (5) Sentencia -> . Asignacion
    (6) Sentencia -> . EstructuraControl
    (7) Sentencia -> . SentenciaPrint
    (8) Declaracion -> . TIPO ID SEMICOLON
    (9) Asignacion -> . ID ASIGN Expresion SEMICOLON
    (10) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (11) EstructuraControl -> . IF LPAREN Expresion RPAREN LBRACE Sentencias RBRACE ELSE LBRACE Sentencias RBRACE
    (12) EstructuraControl -> . WHILE LPAREN Expresion RPAREN LBRACE Sentencias RBRACE
    (13) SentenciaPrint -> . PRINT ID SEMICOLON

    TIPO            shift and go to state 8
    ID              shift and go to state 9
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12

    Sentencias                     shift and go to state 48
    Sentencia                      shift and go to state 3
    Declaracion                    shift and go to state 4
    Asignacion                     shift and go to state 5
    EstructuraControl              shift and go to state 6
    SentenciaPrint                 shift and go to state 7

state 48
